--- a/ratings/templates/ratings/category_detail.html
+++ b/ratings/templates/ratings/category_detail.html
@@ -2,17 +2,15 @@
 
 {% block content %}
     {% if category.name %}
-        <div class="name">
-            {{ category.name }}
-        </div>
     {% endif %}
     <h1>{{ category.name }}</h1>
-    <p>{{ category.desc }}</p>
-    
+    <p>{{ category.desc }}</p>   
     {% for tool in tools %}
         <div class = "tool">
             <h1><a href="">{{ tool.name }}</a></h1>
             <p>{{ tool.desc|linebreaks }}</p>
+            <p>Overall Score: {{ tool.overall_score }}<br>
+                {% if tool.free == True%}Free tool.{% endif %}</p>
         </div>
     {% endfor %}
 {% endblock %}
