--- a/ratings/templates/ratings/category_detail.html
+++ b/ratings/templates/ratings/category_detail.html
@@ -9,8 +9,10 @@
         <div class = "tool">
             <h1><a href="">{{ tool.name }}</a></h1>
             <p>{{ tool.desc|linebreaks }}</p>
-            <p>Overall Score: {{ tool.overall_score }}<br>
-                {% if tool.free == True%}Free tool.{% endif %}</p>
+            <p>Overall Score: {{ tool.overall_score|floatformat:"2" }} // Documentation Quality: {{ tool.qual_of_doc|floatformat:"2" }} // Efficacy: {{ tool.efficacy|floatformat:"2" }} // Usability: {{ tool.usability|floatformat:"2" }}<br>
+                <a href="{{ tool.link }}">{{ tool.name }} Home Page</a><br>
+                {% if tool.free == True %}Free tool.<br>{% endif %}
+                {% if tool.online == True %}Online tool.{% endif %}</p>
         </div>
     {% endfor %}
 {% endblock %}
