--- a/ratings/templates/ratings/tool_detail.html
+++ b/ratings/templates/ratings/tool_detail.html
@@ -9,10 +9,11 @@
     <a href="{{ tool.link }}">{{ tool.name }} Home Page</a><br>
     {% if tool.free == True %}Free tool.<br>{% endif %}
     {% if tool.online == True %}Online tool.{% endif %}</p>
-    {% for rating in ratings %}
-        <div class = "rating">
-            <p>Review Date: {{ rating.review_date }} // Overall Score: {{ rating.overall_score|floatformat:"2" }} // Documentation Quality: {{ rating.qual_of_doc|floatformat:"2" }} // Efficacy: {{ rating.efficacy|floatformat:"2" }} // Usability: {{ rating.usability|floatformat:"2" }}
-            {{ rating.comment }}</p>
+    {% for vote in votes %}
+        <div class = "vote">
+            <p>Review Date: {{ vote.review_date }} <br>
+            Overall Score: {{ vote.overall_rating|floatformat:"2" }} // Documentation Quality: {{ vote.qual_of_doc|floatformat:"2" }} // Efficacy: {{ vote.efficacy|floatformat:"2" }} // Usability: {{ vote.usability|floatformat:"2" }}
+            {% if vote.comment %}<br>{{ vote.comment }}{% endif %}</p>
             
         </div>
     {% endfor %}
