Updated urls.py and views.py so categories and tools are accessible by name

--- a/ratings/templates/ratings/categorys_list.html
+++ b/ratings/templates/ratings/categorys_list.html
@@ -3,7 +3,7 @@
 {% block content %}
     {% for category in categorys %}
         <div class="category">
-            <h1><a href="{% url 'ratings.views.category_detail' pk=category.pk  %}">{{ category.name }}</a></h1>
+            <h1><a href="{% url 'ratings.views.category_detail_by_name' category.name  %}">{{ category.name }}</a></h1>
             <p>{{ category.desc|linebreaks }}</p>
         </div>
     {% endfor %}
