A host of small changes

--- a/ratings/templates/ratings/category_detail.html
+++ b/ratings/templates/ratings/category_detail.html
@@ -1,6 +1,10 @@
 {% extends 'ratings/base.html' %}
 
 {% block content %}
+<head>
+<title>feHelix: {{ category.name }}</title>
+</head>
+
     {% if category.name %}
     {% endif %}
     <h1>{{ category.name }}</h1>
@@ -15,5 +19,5 @@
                 {% if tool.online == True %}Online tool.{% endif %}</p>
         </div>
     {% endfor %}
-    <a href = "{% url 'ratings.views.nominate_tool' %}"><h1>Nominate a new tool.</h1></a>
+    <a href = "{% url 'ratings.views.nominate_tool' %}"><h3>Nominate a new tool.</h3></a>
 {% endblock %}
