--- a/ratings/templates/ratings/category_nomination.html
+++ b/ratings/templates/ratings/category_nomination.html
@@ -1,6 +1,9 @@
 {% extends 'ratings/base.html' %}
 
 {% block content %}
+<head>
+<title>feHelix: Nominate a new category</title>
+</head>
     <h1>Nominate a new category</h1>
     <p>Please enter the information for the new category.</p>
     
@@ -9,6 +12,7 @@
             <tr><td>Your Name:&nbsp</td><td>{{ form.nominator_name }}</td>
             <tr><td>Your Email:&nbsp</td><td>{{ form.nominator_email }}</td>
             <tr><td>Category Name:&nbsp</td><td>{{ form.name }}</td>
+            <tr><td>&nbsp</td></tr></table>
             <table><tr><td>Category Description:</td></tr>
             <tr><td>{{ form.desc }}</td></tr> 
         </table>
